# FileStorageEngine

./: CMakeLists.txt  README.md
InformationFile/: REDE.md
example/: block_delete_test.cpp  block_read_test.cpp  block_start.cpp  block_write_test.cpp  mmap_test.cpp
include/: common.h  file_op.h  index_handle.h  mmap_file.h  mmap_file_op.h
path/: CodeTest.txt
path/index/: 1
src/: file_op.cpp  index_handle.cpp  main.cpp  mmap_file.cpp  mmap_file_op.cpp
